# ScholarStream

./: .dockerignore  .gitignore  Dockerfile  README.md  agentic_prompts.py  agentic_rag.py  arxiv_client.py  cache_service.py  compose.yml  gradio_app.py  ingest.py  ingest_landmarks.py  init_db.py  init_os.py  langfuse_service.py  main.py  memory.md  opensearch_service.py  pdf_parser.py  pyproject.toml  scholarstream_ui.html
dags/: arxiv_ingestion_dag.py
