[project]
name = "scholarstream"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.132.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "opensearch-py>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]
