[project]
name = "scholarstream"
version = "0.1.0"
description = "Production-ready RAG ingestion pipeline for scientific papers"
readme = "README.md"
requires-python = ">=3.12,<3.13" 
dependencies = [
    "arxiv>=2.4.0",
    "docling>=2.75.0",
    "fastapi>=0.132.0",
    "grpcio!=1.78.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.0.1",
    "opensearch-py>=3.1.0",
    "psycopg2-binary>=2.9.11",
    "requests>=2.32.5",
    "uvicorn>=0.41.0",
]

